@@ -1,5 +1,9 @@
 Changes file for Task-Date-Holidays
 
+HEAD
+
+- Added Date::Holidays::US for evaluation
+
 0.12 2022-07-08 Bug fix release, update not required
 
 - Corrected tests, which had not been updated accordingly
